--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ terraform.tfstate*
 
 todo-app/
 todo-app.zip
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
